--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,5 +30,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: jontesdocker/my-app:${{ github.run_number }}
