--- a/.github/workflows/greeter.yml
+++ b/.github/workflows/greeter.yml
@@ -2,6 +2,11 @@ name: Greeter
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
+      - development
+  pull_request:
 
 jobs:
   greet:
