--- a/.github/workflows/greeter.yml
+++ b/.github/workflows/greeter.yml
@@ -9,14 +9,13 @@ on:
   pull_request:
 
 
-
 jobs:
   greet:
     runs-on: ubuntu-latest
 
     steps:
-      - name: step 1, Greet
-        run: echo Hello team!
+      - name: step 1, install java
+        run:
 
       - name: step 2
         run: echo bye bye
