--- a/.github/workflows/greeter.yml
+++ b/.github/workflows/greeter.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: step 1, install java
-        run:
+      - name: step 1, Greet
+        run: echo Hello team!
 
       - name: step 2
         run: echo bye bye
