--- a/.github/workflows/greeter.yml
+++ b/.github/workflows/greeter.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: step 1, Greet
-        run: echo Hello team!
+        run: echo ${{ secrets.KEY }}
 
       - name: step 2
         run: echo bye bye
